--- a/connororton.html
+++ b/connororton.html
@@ -27,7 +27,7 @@
     </div>
   </nav>
   <div class="" style="">
-    <div class="container pb-2" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
+    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12"><img class="d-block img-fluid d-flex justify-content-center border-dark border my-2 mx-auto" src="assets/Portrait/Connor_Orton.jpg" height="300" width="300
 400
@@ -44,7 +44,7 @@
       </div>
       <div class="row">
         <div style="">
-          <p class="lead bg-secondary text-left mx-2 p-2">I am a highly motivated and dedicated video game developer whose passions include games programming and design. My interest in games production started at an early age and my ambition is to develop enjoyable and innovative games for a wide variety of audiences to play. I have experience with most industry standard game engines and production software. I can read and write in a variety of different programming languages which I've taught myself and I've always had the desire to learn and improve on my skill set. Find my CV and portfolio below that I've developed over the years in my free time and at university.</p>
+          <p class="bg-secondary text-left p-2 lead mx-2 mb-0">I am a highly motivated and dedicated video game developer whose passions include games programming and design. My interest in games production started at an early age and my ambition is to develop enjoyable and innovative games for a wide variety of audiences to play. I have experience with most industry standard game engines and production software. I can read and write in a variety of different programming languages which I've taught myself and I've always had the desire to learn and improve on my skill set. Find my CV and portfolio below that I've developed over the years in my free time and at university.</p>
           <div class="row px-2">
             <div class="col-md-4"><a class="btn text-white d-flex btn-lg align-items-start justify-content-center btn-block my-2" href="https://www.facebook.com/connor.orton/" style="background: rgb(59, 89, 152);" target="_blank"><i class="mb-3 lead"></i><i class="fa fa-facebook fa-fw fa-1x py-1"></i><i class="text"></i></a></div>
             <div class="col-md-4"><a class="btn text-white my-2 mx-auto btn-lg d-flex justify-content-center" href="https://www.linkedin.com/in/connororton/" style="background: rgb(9, 118, 180);" target="_blank"><i class="fa fa-linkedin fa-fw fa-1x py-1"></i></a></div>
