--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="row pb-0 pt-2" style="">
         <div class="col-md-12 col-lg-12">
           <h1 class="text-center bg-secondary py-2">About Us</h1>
-          <p style="" class="my-2 bg-primary py-4 px-3 text-left">Fine Chap Games is a newly established indie games development company comprising of two members. We've only released one game so far on the google play store but we plan on releasing several more inovative and enjoyable games in the near future. We mainly develop 2D games but we have plans to venture into 3D development eventually. Find our portfolios and CVs below if you are looking to hire.</p>
+          <p style="" class="my-2 bg-primary py-4 px-3 text-left lead">Fine Chap Games is a newly established indie games development company comprising of two members. We've only released one game so far on the google play store but we plan on releasing several more inovative and enjoyable games in the near future. We mainly develop 2D games but we have plans to venture into 3D development eventually. Find our portfolios and CVs below if you are looking to hire.</p>
           <h1 class="text-center bg-secondary py-2">The Team</h1>
           <div class="col-md-12">
             <div class="row">
@@ -41,7 +41,7 @@
                     <h5 class="bg-secondary text-center py-2">Games Programmer &amp; Designer</h5>
                   </div>
                 </div>
-                <p class="mb-0 bg-primary px-2 py-2 text-left" style="">Connor is a games programmer and designer. He has been passionate about games production since an early age who started out using RPG Maker 2000 to create 2D RPG games. His responsibilities include designing and writing game systems in a variety of different programming languages. He also oversees the project pipeline and asset implementation in the game engine.&nbsp;<br></p><a class="btn btn-primary my-2 btn-block" href="connororton.html" style="">Portfolio &amp; CV</a>
+                <p class="mb-0 bg-primary px-2 py-2 text-left" style="">Connor is a games programmer and designer. He has been passionate about games production since an early age who started out using RPG Maker XP to create 2D RPG games. His responsibilities include designing and writing game systems in a variety of different programming languages. He also oversees the project pipeline and asset implementation in the game engine.&nbsp;<br></p><a class="btn btn-primary my-2 btn-block" href="connororton.html" style="">Portfolio &amp; CV</a>
               </div>
               <div class="col-12 col-lg-6">
                 <img class="img-fluid d-block mb-3 mx-auto border border-dark" alt="Card image cap" src="assets/Portrait/Natalie_Smith.jpg" width="350">
@@ -51,7 +51,7 @@
                     <h5 class="bg-secondary text-center py-2">2D Digital Artist</h5>
                   </div>
                 </div>
-                <p class="mb-0 bg-primary px-2 py-2 text-left">Natalie is a 2D digital artist. She has always been passionate about art and never forgets the day she got her first art tablet and pen. Her responsibilities include conceptualizing various game ideas and creating assets based on them using industry standard software and art techniques. She has experience using the latest art programs&nbsp;such as Photoshop, Aseprite, Paint Tool SAI and more.</p><a class="btn btn-primary my-2 btn-block" style="" href="nataliesmith.html">Portfolio &amp; CV</a>
+                <p class="mb-0 bg-primary px-2 py-2 text-left">Natalie is a 2D digital artist. She has always been passionate about art and being creative since her first drawing as a child. Her responsibilities include conceptualizing various game ideas and creating art assets using industry standard software alongside being equippped with the most popular top grade hardware. She has experience using the latest art programs&nbsp;such as Photoshop, Aseprite, Paint Tool SAI and more.&nbsp;</p><a class="btn btn-primary my-2 btn-block" style="" href="nataliesmith.html">Portfolio &amp; CV</a>
               </div>
             </div>
           </div>
@@ -110,7 +110,7 @@
   <div class="" style="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
-        <div class="col-md-12" style="">
+        <div class="col-md-12 pt-2" style="">
           <h1 class="text-center bg-secondary py-2">Project Blight (In Development)</h1>
         </div>
       </div>
@@ -125,7 +125,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 my-2">
+        <div class="col-md-12 pb-2">
           <div class="embed-responsive embed-responsive-16by9">
             <video src="assets/Portfolio/Shared/BOTR/Blight of the Rose - Dev Update 1.mp4" class="embed-responsive-item" controls="controls" width="11"> Your browser does not support HTML5 video. </video>
           </div>
