--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="wireframe.css">
 </head>
 
-<body class="bg-primary" style="	background-position: top left;	background-size: 100%;	background-repeat: repeat;	background-image: url(assets/FineChapGames/FCG_Wallpaper.jpg);">
+<body class="bg-primary mx-auto" style="	background-position: top left;	background-size: 100%;	background-repeat: repeat;	background-image: url(assets/FineChapGames/FCG_Wallpaper.jpg);">
   <div class="" style="	background-image: linear-gradient(to bottom, black, black);	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
     <div class="container">
       <div class="row">
@@ -23,27 +23,30 @@
       </div>
     </div>
   </div>
+  <nav class="navbar navbar-light bg-dark">
+    <div class="container"> </div>
+  </nav>
   <div class="" style="	background-position: right bottom;	background-size: cover;	background-repeat: repeat;">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row pb-0 pt-2" style="">
         <div class="col-md-12 col-lg-12">
-          <h1 class="text-center bg-secondary py-2">About Us</h1>
+          <h1 class="text-center bg-secondary p-3">About Us</h1>
           <p style="" class="my-2 bg-primary py-4 px-3 text-left lead">Fine Chap Games is a newly established indie games development company comprising of two members. We've only released one game so far on the google play store but we plan on releasing several more inovative and enjoyable games in the near future. We mainly develop 2D games but we have plans to venture into 3D development eventually. Find our portfolios and CVs below if you are looking to hire.</p>
-          <h1 class="text-center bg-secondary py-2">The Team</h1>
+          <h1 class="text-center bg-secondary p-3">The Team</h1>
           <div class="col-md-12">
             <div class="row">
-              <div class="col-12 col-lg-6"> <img class="img-fluid d-block mb-3 mx-auto border border-dark" width="350
+              <div class="col-12 col-lg-6" style=""> <img class="img-fluid d-block mb-3 mx-auto border border-dark" width="350
 400
 350" alt="Card image cap" src="assets/Portrait/Connor_Orton.jpg">
                 <div class="row">
                   <div class="col-md-12" style="">
-                    <h2 class="bg-secondary text-center">Connor Orton BSc</h2>
+                    <h2 class="bg-secondary text-centerpx-md-5 text-center"><b class="text-center">Connor Orton BSc</b><br></h2>
                     <h5 class="bg-secondary text-center py-2">Games Programmer &amp; Designer</h5>
                   </div>
                 </div>
                 <p class="mb-0 bg-primary px-2 py-2 text-left" style="">Connor is a games programmer and designer. He has been passionate about games production since an early age who started out using RPG Maker XP to create 2D RPG games. His responsibilities include designing and writing game systems in a variety of different programming languages. He also oversees the project pipeline and asset implementation in the game engine.&nbsp;<br></p><a class="btn btn-primary my-2 btn-block" href="connororton.html" style="">Portfolio &amp; CV</a>
               </div>
-              <div class="col-12 col-lg-6">
+              <div class="col-12 col-lg-6" style="">
                 <img class="img-fluid d-block mb-3 mx-auto border border-dark" alt="Card image cap" src="assets/Portrait/Natalie_Smith.jpg" width="350">
                 <div class="row">
                   <div class="col-md-12">
@@ -71,7 +74,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="text-center bg-secondary py-2" style="">Game Projects</h1>
+          <h1 class="text-center bg-secondary p-3" style="">Game Projects</h1>
         </div>
       </div>
     </div>
@@ -80,7 +83,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12" style="">
-          <h1 class="text-center bg-secondary py-2">Pixel Pinball Arcade</h1>
+          <h1 class="text-center bg-secondary p-3">Pixel Pinball Arcade</h1>
         </div>
       </div>
       <div class="row">
@@ -97,7 +100,7 @@
         <div class="col-md-12">
           <div class="row">
             <div class="col-md-12 mt-2">
-              <h2 class="text-center bg-primary py-2"><b>Gameplay Video</b></h2>
+              <h2 class="text-center bg-primary p-3"><b>Gameplay Video</b></h2>
             </div>
           </div>
           <div class="embed-responsive embed-responsive-16by9">
@@ -111,7 +114,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12 pt-2" style="">
-          <h1 class="text-center bg-secondary py-2">Project Blight (In Development)</h1>
+          <h1 class="bg-secondary p-3">Blight of the Rose (In Development)</h1>
         </div>
       </div>
       <div class="row">
@@ -121,7 +124,7 @@
       </div>
       <div class="row">
         <div class="col-md-12 mt-2">
-          <h2 class="text-center bg-primary py-2"><b>Development Update Video</b></h2>
+          <h2 class="text-center bg-primary py-3"><b>Development Update Video</b></h2>
         </div>
       </div>
       <div class="row">
