--- a/nataliesmith.html
+++ b/nataliesmith.html
@@ -12,19 +12,10 @@
 </head>
 
 <body style="	background-image: url(assets/FineChapGames/FCG_Wallpaper.jpg);	background-position: top left;	background-size: 100%;	background-repeat: repeat;" class="mx-auto">
-  <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-    <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0 p-0" type="button" data-toggle="collapse" data-target="#navbar14">
-        <img src="assets/FineChapGames/Logo_ZoomedOut_NoBG.png" width="30" height="30" class="d-inline-block align-top" alt="">
-        <p class="navbar-brand mb-0 text-white" style=""> Fine Chap Games</p>
-      </button>
-      <div class="collapse navbar-collapse" id="navbar14">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active"> <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a> </li>
-        </ul>
-        <img class="img-fluid d-block" src="assets/FineChapGames/Logo_ZoomedOut_NoBG.png" width="50">
-        <p class="d-none d-md-block lead mb-0  text-white">Fine Chap Games</p>
-      </div>
-    </div>
+  <nav class="navbar navbar-dark bg-dark">
+    <div class="container d-flex justify-content-center"> <a class="navbar-brand" href="index.html">
+        <img src="assets/FineChapGames/Logo_ZoomedOut_NoBG.png" width="55" height="55" class="d-inline-block align-top" alt=""><b class="d-inline-flex p-1 text-primary"> Fine Chap Games</b>
+      </a> </div>
   </nav>
   <div class="" style="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
