--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       </div>
     </div>
   </div>
-  <nav class="navbar navbar-dark bg-dark">
-    <div class="container d-flex justify-content-center"> <a class="navbar-brand" href="#">
+  <nav class="navbar navbar-dark bg-dark p-0">
+    <div class="container d-flex justify-content-center"> <a class="navbar-brand">
         <img src="assets/FineChapGames/Logo_ZoomedOut_NoBG.png" width="55" height="55" class="d-inline-block align-top" alt=""><b class="d-inline-flex p-1 text-primary"> Fine Chap Games</b>
       </a> </div>
   </nav>
