--- a/connororton.html
+++ b/connororton.html
@@ -285,7 +285,7 @@
               <div class="form-group col-md-6"> <input type="email" class="form-control" id="form28" placeholder="Email" required="required" name="Email"> </div>
             </div>
             <div class="form-group"> <input type="text" class="form-control" id="form29" placeholder="Subject" required="required" name="Subject"> </div>
-            <div class="form-group"> <textarea class="form-control" id="form30" rows="3" placeholder="Your message" name="Your message"></textarea> </div> <button type="submit" class="btn btn-primary">Send</button>
+            <div class="form-group"> <textarea class="form-control" id="form30" rows="3" placeholder="Your message" name="Your message"></textarea> </div> <button type="submit" class="btn btn-primary mb-2">Send</button>
           </form>
         </div>
       </div>
