--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- PAGE settings -->
-  <link rel="icon">
+  <link rel="icon" href="assets/FineChapGames/Logo_ZoomedOut_NoBG.png">
   <title>Fine Chap Games</title>
   <meta name="description" content="Welcome to the Fine Chap Games indie games development team's website.">
   <meta name="keywords" content="Fine Chap Games Development Indie">
