--- a/nataliesmith.html
+++ b/nataliesmith.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Welcome to the portfolio of Natalie Smith">
   <meta name="keywords" content="Natalie Smith Indie Game Development Portfolio">
   <link rel="stylesheet" href="wireframe.css">
+  <link rel="icon" href="assets/FineChapGames/Logo_ZoomedOut_NoBG.png">
 </head>
 
 <body style="	background-image: url(assets/FineChapGames/FCG_Wallpaper.jpg);	background-position: top left;	background-size: 100%;	background-repeat: repeat;" class="mx-auto">
