--- a/nataliesmith.html
+++ b/nataliesmith.html
@@ -27,9 +27,9 @@
       </div>
       <div class="row">
         <div style="" class="col-md-12">
-          <h1 class="text-center bg-secondary display-4 p-3"><b>Natalie Smith</b><br>Digital Artist &amp; Craftswoman</h1>
+          <h2 class="text-center py-2 bg-secondary"><b>Natalie Smith</b><br>Digital Artist &amp; Craftswoman</h2>
           <div class="row">
-            <p class="bg-secondary text-left p-2 mx-2 mb-0">Welcome to my portfolio page. I am a passionate, imaginative and&nbsp;conscientious digital artist and arts and crafts creator. I've always been a creative person my whole life and I want to be employed doing what I love by creating my art passions. I create digital art using the most popular industry standard software and hardware. I enjoy sketching on my graphics tablets often and creating a variety of different 2D artwork ranging from pixel art to seeing line art to completion. I also have knitting and sewing skills alongside non-digital artwork experience and I have plans to sell my creations online. Find my CV and portfolio below.<br></p>
+            <p class="text-left p-2 mx-2 mb-0 bg-primary">Welcome to my portfolio page. I am a passionate, imaginative and&nbsp;conscientious digital artist and arts and crafts creator. I've always been a creative person my whole life and I want to be employed doing what I love by creating my art passions. I create digital art using the most popular industry standard software and hardware. I enjoy sketching on my graphics tablets often and creating a variety of different 2D artwork ranging from pixel art to seeing line art to completion. I also have knitting and sewing skills alongside non-digital artwork experience and I have plans to sell my creations online. Find my CV and portfolio below.<br></p>
             <div class="col-md-12">
             </div>
           </div>
@@ -50,7 +50,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12 pt-2">
-          <h1 class="text-center bg-secondary display-4 p-3"><b>Games Art Portfolio</b></h1>
+          <h1 class="text-center bg-secondary py-3"><b>Games Art Portfolio</b></h1>
         </div>
       </div>
     </div>
@@ -59,15 +59,16 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="text-center bg-secondary display-4 p-3" style=""><b>Blight of the Rose (In Development) - 2021+ (Unity, C#)</b></h1>
-          <p class="bg-secondary text-left p-2">Blight of the Rose is an upcoming multi-platform 2D survival horror game developed in Unity and written in C#. It is being developed in a team of two. The game is set during an apocolpyse style event where a city is overrun by zombie-like beings. One of the main themes of the game is connectivity and the reliance on technology and this theme is featured heavily in the storyline as the player relies on their mobile phone and a modified respirator to survive and locate other survivors. My responsibility is to develop all of the various 2D sprites to import into the project such as control scheme icon, in-game maps, item icon sprites and more.&nbsp;All sprites are work in progress whilst the game is in development. All sprites were made in Aseprite and exported as a png.<br><br>Below is a video of the game in its current state. It is in early development and most art isn't final until release.</p>
+          <h2 class="text-center py-2 bg-secondary" style=""><b>Blight of the Rose (Upcoming)</b></h2>
+          <h4 class="text-center py-2 bg-secondary" style=""><b>Unity, C#</b></h4>
+          <p class="text-left p-2 bg-primary">Blight of the Rose is an upcoming multi-platform 2D survival horror game developed in Unity and written in C#. It is being developed in a team of two. The game is set during an apocolpyse style event where a city is overrun by zombie-like beings. One of the main themes of the game is connectivity and the reliance on technology and this theme is featured heavily in the storyline as the player relies on their mobile phone and a modified respirator to survive and locate other survivors. My responsibility is to develop all of the various 2D sprites to import into the project such as control scheme icon, in-game maps, item icon sprites and more.&nbsp;All sprites are work in progress whilst the game is in development. All sprites were made in Aseprite and exported as a png.<br><br>Below is a video of the game in its current state. It is in early development and most art isn't final until release.</p>
         </div>
       </div>
     </div>
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="text-center bg-secondary display-4 p-3"><b>Item Icons</b></h1>
+          <h4 class="text-center py-2 bg-secondary"><b>Item Icons</b></h4>
         </div>
       </div>
       <div class="row pb-3">
@@ -102,7 +103,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <h1 class="text-center bg-secondary display-4 p-3 mt-2"><b>Crafting Stations</b></h1>
+          <h4 class="text-center py-2 bg-secondary mt-2"><b>Crafting Stations</b></h4>
         </div>
       </div>
       <div class="row pb-3">
@@ -125,7 +126,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="text-center bg-secondary display-4 p-3 mt-2"><b>Placeholder Character&nbsp;</b></h1>
+          <h4 class="text-center py-2 bg-secondary"><b>Placeholder Character&nbsp;</b></h4>
         </div>
       </div>
       <div class="row pb-3">
@@ -135,7 +136,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="text-center bg-secondary display-4 p-3"><b>Control Schemes</b></h1>
+          <h4 class="text-center py-2 bg-secondary"><b>Control Schemes</b></h4>
         </div>
       </div>
       <div class="row pb-3">
@@ -148,7 +149,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="text-center bg-secondary display-4 p-3"><b>User Interface</b></h1>
+          <h4 class="text-center py-2 bg-secondary"><b>User Interface</b></h4>
         </div>
       </div>
       <div class="row">
@@ -169,7 +170,7 @@
       <div class="col-md-12">
         <div class="row">
           <div class="col-md-12">
-            <h1 class="text-center bg-secondary display-4 p-3"><b>Development Update Video</b></h1>
+            <h4 class="text-center py-2 bg-secondary"><b>Development Update Video</b></h4>
           </div>
         </div>
         <div class="row">
@@ -186,8 +187,8 @@
         <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
           <div class="row">
             <div class="col-md-12" style="">
-              <h1 class="text-center bg-secondary display-4 p-3 mt-2" style=""><b>Pixel Pinball Arcade - 2020 (Unity C#)</b></h1>
-              <p class="text-left bg-secondary p-3">Pixel Pinball Arcade is an android arcade game developed in Unity written in C# and released for free on the google play store. Inspired by the popular arcade machine pinball. The game was developed in a team of two which included myself and a 2D artist. This was my second project working in a team of two. My main responsibility was to create the various 2D art assets such as the backgrounds, user interface sprites, game board sprites and so on.</p>
+              <h2 class="text-center py-2 bg-secondary" style=""><b>Pixel Pinball Arcade - 2020 (Unity C#)</b></h2>
+              <p class="text-left p-3 bg-primary">Pixel Pinball Arcade is an android arcade game developed in Unity written in C# and released for free on the google play store. Inspired by the popular arcade machine pinball. The game was developed in a team of two which included myself and a 2D artist. This was my second project working in a team of two. My main responsibility was to create the various 2D art assets such as the backgrounds, user interface sprites, game board sprites and so on.</p>
             </div>
           </div>
         </div>
@@ -199,8 +200,8 @@
           </div>
           <div class="row">
             <div class="col-md-12">
-              <h1 class="text-center bg-secondary display-4 p-3 mt-2"><b>2D Sprites</b></h1>
-              <p class="lead bg-secondary text-left p-3">All sprites were designed and developed by myself taking inspiration from real pinball boards. They were all developed and exported using Aseprite.</p>
+              <h4 class="text-center py-2 bg-secondary"><b>2D Sprites</b></h4>
+              <p class="lead text-left p-3 bg-primary">All sprites were designed and developed by myself taking inspiration from real pinball boards. They were all developed and exported using Aseprite.</p>
             </div>
           </div>
         </div>
@@ -251,7 +252,7 @@
       <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
         <div class="row">
           <div class="col-md-12">
-            <h1 class="text-center bg-primary my-2">Contact Form</h1>
+            <h2 class="text-center py-2 bg-secondary">Contact Form</h2>
           </div>
         </div>
         <div class="row">
